Moonshot/res/tests/conditions/correct/condition_3.fox
if(false)
	foo = "if!";
else if(false)
{
	foo = "elif1";
}
else if(true)
	foo = "elif2!";
else 
{
	"else!";
}