Moonshot/res/tests/conditions/bad/condition_5.fox
if(false)
	foo = "if!"; 
else }
	let var2: float;